// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing document symbols of test_alias.vhd 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "kind": 8,
            "name": "field",
            "range": {
              "end": {
                "character": 18,
                "line": 6,
              },
              "start": {
                "character": 4,
                "line": 6,
              },
            },
            "selectionRange": {
              "end": {
                "character": 9,
                "line": 6,
              },
              "start": {
                "character": 4,
                "line": 6,
              },
            },
          },
        ],
        "detail": "Record",
        "kind": 23,
        "name": "rec",
        "range": {
          "end": {
            "character": 2,
            "line": 7,
          },
          "start": {
            "character": 2,
            "line": 5,
          },
        },
        "selectionRange": {
          "end": {
            "character": 10,
            "line": 5,
          },
          "start": {
            "character": 7,
            "line": 5,
          },
        },
      },
      {
        "kind": 8,
        "name": "a",
        "range": {
          "end": {
            "character": 7,
            "line": 10,
          },
          "start": {
            "character": 2,
            "line": 9,
          },
        },
        "selectionRange": {
          "end": {
            "character": 9,
            "line": 9,
          },
          "start": {
            "character": 8,
            "line": 9,
          },
        },
      },
    ],
    "detail": "package",
    "kind": 5,
    "name": "pkg",
    "range": {
      "end": {
        "character": 12,
        "line": 12,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 11,
        "line": 4,
      },
      "start": {
        "character": 8,
        "line": 4,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_block.vhd 1`] = `
[
  {
    "children": undefined,
    "detail": "entity",
    "kind": 11,
    "name": "test_block",
    "range": {
      "end": {
        "character": 14,
        "line": 5,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 17,
        "line": 4,
      },
      "start": {
        "character": 7,
        "line": 4,
      },
    },
  },
  {
    "children": [
      {
        "children": [],
        "detail": "block",
        "kind": 19,
        "name": "block_label",
        "range": {
          "end": {
            "character": 12,
            "line": 13,
          },
          "start": {
            "character": 2,
            "line": 11,
          },
        },
        "selectionRange": {
          "end": {
            "character": 13,
            "line": 11,
          },
          "start": {
            "character": 2,
            "line": 11,
          },
        },
      },
    ],
    "detail": "architecture",
    "kind": 5,
    "name": "test_block",
    "range": {
      "end": {
        "character": 9,
        "line": 15,
      },
      "start": {
        "character": 0,
        "line": 7,
      },
    },
    "selectionRange": {
      "end": {
        "character": 31,
        "line": 7,
      },
      "start": {
        "character": 21,
        "line": 7,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_case_generate.vhd 1`] = `
[
  {
    "children": undefined,
    "detail": "entity",
    "kind": 11,
    "name": "test",
    "range": {
      "end": {
        "character": 8,
        "line": 5,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 11,
        "line": 4,
      },
      "start": {
        "character": 7,
        "line": 4,
      },
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "detail": "when clause",
            "kind": 22,
            "name": "1",
            "range": {
              "end": {
                "character": 13,
                "line": 13,
              },
              "start": {
                "character": 4,
                "line": 12,
              },
            },
            "selectionRange": {
              "end": {
                "character": 13,
                "line": 13,
              },
              "start": {
                "character": 4,
                "line": 12,
              },
            },
          },
          {
            "children": [],
            "detail": "when clause",
            "kind": 22,
            "name": "others",
            "range": {
              "end": {
                "character": 13,
                "line": 15,
              },
              "start": {
                "character": 4,
                "line": 14,
              },
            },
            "selectionRange": {
              "end": {
                "character": 13,
                "line": 15,
              },
              "start": {
                "character": 4,
                "line": 14,
              },
            },
          },
        ],
        "detail": "case generate",
        "kind": 10,
        "name": "p_gen: x",
        "range": {
          "end": {
            "character": 20,
            "line": 16,
          },
          "start": {
            "character": 2,
            "line": 11,
          },
        },
        "selectionRange": {
          "end": {
            "character": 7,
            "line": 11,
          },
          "start": {
            "character": 2,
            "line": 11,
          },
        },
      },
    ],
    "detail": "architecture",
    "kind": 5,
    "name": "test",
    "range": {
      "end": {
        "character": 9,
        "line": 18,
      },
      "start": {
        "character": 0,
        "line": 7,
      },
    },
    "selectionRange": {
      "end": {
        "character": 25,
        "line": 7,
      },
      "start": {
        "character": 21,
        "line": 7,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_for_generate.vhd 1`] = `
[
  {
    "children": undefined,
    "detail": "entity",
    "kind": 11,
    "name": "test",
    "range": {
      "end": {
        "character": 8,
        "line": 5,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 11,
        "line": 4,
      },
      "start": {
        "character": 7,
        "line": 4,
      },
    },
  },
  {
    "children": [
      {
        "children": [],
        "detail": "for generate",
        "kind": 10,
        "name": "p_gen: i in 0 to 3",
        "range": {
          "end": {
            "character": 21,
            "line": 13,
          },
          "start": {
            "character": 2,
            "line": 11,
          },
        },
        "selectionRange": {
          "end": {
            "character": 7,
            "line": 11,
          },
          "start": {
            "character": 2,
            "line": 11,
          },
        },
      },
    ],
    "detail": "architecture",
    "kind": 5,
    "name": "test",
    "range": {
      "end": {
        "character": 9,
        "line": 15,
      },
      "start": {
        "character": 0,
        "line": 7,
      },
    },
    "selectionRange": {
      "end": {
        "character": 25,
        "line": 7,
      },
      "start": {
        "character": 21,
        "line": 7,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_if_else_generate.vhd 1`] = `
[
  {
    "children": undefined,
    "detail": "entity",
    "kind": 11,
    "name": "test",
    "range": {
      "end": {
        "character": 8,
        "line": 5,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 11,
        "line": 4,
      },
      "start": {
        "character": 7,
        "line": 4,
      },
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "detail": "if",
            "kind": 22,
            "name": "alt_label: true",
            "range": {
              "end": {
                "character": 11,
                "line": 14,
              },
              "start": {
                "character": 2,
                "line": 12,
              },
            },
            "selectionRange": {
              "end": {
                "character": 14,
                "line": 12,
              },
              "start": {
                "character": 5,
                "line": 12,
              },
            },
          },
          {
            "children": [],
            "detail": "else",
            "kind": 22,
            "name": "else",
            "range": {
              "end": {
                "character": 21,
                "line": 23,
              },
              "start": {
                "character": 2,
                "line": 15,
              },
            },
            "selectionRange": {
              "end": {
                "character": 21,
                "line": 23,
              },
              "start": {
                "character": 2,
                "line": 15,
              },
            },
          },
        ],
        "detail": "if generate",
        "kind": 10,
        "name": "p_gen",
        "range": {
          "end": {
            "character": 0,
            "line": 25,
          },
          "start": {
            "character": 2,
            "line": 11,
          },
        },
        "selectionRange": {
          "end": {
            "character": 7,
            "line": 11,
          },
          "start": {
            "character": 2,
            "line": 11,
          },
        },
      },
    ],
    "detail": "architecture",
    "kind": 5,
    "name": "test",
    "range": {
      "end": {
        "character": 9,
        "line": 25,
      },
      "start": {
        "character": 0,
        "line": 7,
      },
    },
    "selectionRange": {
      "end": {
        "character": 25,
        "line": 7,
      },
      "start": {
        "character": 21,
        "line": 7,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_if_elsif_generate.vhd 1`] = `
[
  {
    "children": undefined,
    "detail": "entity",
    "kind": 11,
    "name": "test",
    "range": {
      "end": {
        "character": 8,
        "line": 5,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 11,
        "line": 4,
      },
      "start": {
        "character": 7,
        "line": 4,
      },
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "detail": "if",
            "kind": 22,
            "name": "true",
            "range": {
              "end": {
                "character": 11,
                "line": 12,
              },
              "start": {
                "character": 11,
                "line": 11,
              },
            },
            "selectionRange": {
              "end": {
                "character": 18,
                "line": 11,
              },
              "start": {
                "character": 14,
                "line": 11,
              },
            },
          },
          {
            "children": [],
            "detail": "elsif",
            "kind": 22,
            "name": "alt_label: false",
            "range": {
              "end": {
                "character": 22,
                "line": 15,
              },
              "start": {
                "character": 2,
                "line": 13,
              },
            },
            "selectionRange": {
              "end": {
                "character": 17,
                "line": 13,
              },
              "start": {
                "character": 8,
                "line": 13,
              },
            },
          },
        ],
        "detail": "if generate",
        "kind": 10,
        "name": "p_gen2",
        "range": {
          "end": {
            "character": 0,
            "line": 16,
          },
          "start": {
            "character": 2,
            "line": 11,
          },
        },
        "selectionRange": {
          "end": {
            "character": 8,
            "line": 11,
          },
          "start": {
            "character": 2,
            "line": 11,
          },
        },
      },
    ],
    "detail": "architecture",
    "kind": 5,
    "name": "test",
    "range": {
      "end": {
        "character": 9,
        "line": 16,
      },
      "start": {
        "character": 0,
        "line": 7,
      },
    },
    "selectionRange": {
      "end": {
        "character": 25,
        "line": 7,
      },
      "start": {
        "character": 21,
        "line": 7,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_inst.vhd 1`] = `
[
  {
    "children": undefined,
    "detail": "entity",
    "kind": 11,
    "name": "test_inst",
    "range": {
      "end": {
        "character": 13,
        "line": 5,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 16,
        "line": 4,
      },
      "start": {
        "character": 7,
        "line": 4,
      },
    },
  },
  {
    "children": [
      {
        "detail": "instantiation",
        "kind": 2,
        "name": "inst_test_process: test_process",
        "range": {
          "end": {
            "character": 7,
            "line": 14,
          },
          "start": {
            "character": 2,
            "line": 11,
          },
        },
        "selectionRange": {
          "end": {
            "character": 7,
            "line": 14,
          },
          "start": {
            "character": 2,
            "line": 11,
          },
        },
      },
    ],
    "detail": "architecture",
    "kind": 5,
    "name": "test_inst",
    "range": {
      "end": {
        "character": 9,
        "line": 17,
      },
      "start": {
        "character": 0,
        "line": 7,
      },
    },
    "selectionRange": {
      "end": {
        "character": 30,
        "line": 7,
      },
      "start": {
        "character": 21,
        "line": 7,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_process.vhd 1`] = `
[
  {
    "children": undefined,
    "detail": "entity",
    "kind": 11,
    "name": "test_process",
    "range": {
      "end": {
        "character": 16,
        "line": 8,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 19,
        "line": 4,
      },
      "start": {
        "character": 7,
        "line": 4,
      },
    },
  },
  {
    "children": [
      {
        "children": [],
        "detail": "process",
        "kind": 12,
        "name": "no label",
        "range": {
          "end": {
            "character": 13,
            "line": 18,
          },
          "start": {
            "character": 2,
            "line": 13,
          },
        },
        "selectionRange": {
          "end": {
            "character": 13,
            "line": 18,
          },
          "start": {
            "character": 2,
            "line": 13,
          },
        },
      },
    ],
    "detail": "architecture",
    "kind": 5,
    "name": "test_process",
    "range": {
      "end": {
        "character": 9,
        "line": 20,
      },
      "start": {
        "character": 0,
        "line": 10,
      },
    },
    "selectionRange": {
      "end": {
        "character": 33,
        "line": 10,
      },
      "start": {
        "character": 21,
        "line": 10,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_protected.vhd 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "kind": 12,
            "name": "Init",
            "range": {
              "end": {
                "character": 18,
                "line": 6,
              },
              "start": {
                "character": 4,
                "line": 6,
              },
            },
            "selectionRange": {
              "end": {
                "character": 18,
                "line": 6,
              },
              "start": {
                "character": 14,
                "line": 6,
              },
            },
          },
          {
            "kind": 12,
            "name": "Input",
            "range": {
              "end": {
                "character": 44,
                "line": 7,
              },
              "start": {
                "character": 4,
                "line": 7,
              },
            },
            "selectionRange": {
              "end": {
                "character": 19,
                "line": 7,
              },
              "start": {
                "character": 14,
                "line": 7,
              },
            },
          },
          {
            "kind": 12,
            "name": "GetCrc",
            "range": {
              "end": {
                "character": 51,
                "line": 8,
              },
              "start": {
                "character": 4,
                "line": 8,
              },
            },
            "selectionRange": {
              "end": {
                "character": 26,
                "line": 8,
              },
              "start": {
                "character": 20,
                "line": 8,
              },
            },
          },
        ],
        "detail": "protected type",
        "kind": 5,
        "name": "CrcCalculator",
        "range": {
          "end": {
            "character": 15,
            "line": 9,
          },
          "start": {
            "character": 2,
            "line": 5,
          },
        },
        "selectionRange": {
          "end": {
            "character": 20,
            "line": 5,
          },
          "start": {
            "character": 7,
            "line": 5,
          },
        },
      },
    ],
    "detail": "package",
    "kind": 5,
    "name": "pkg",
    "range": {
      "end": {
        "character": 12,
        "line": 10,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 11,
        "line": 4,
      },
      "start": {
        "character": 8,
        "line": 4,
      },
    },
  },
  {
    "children": [
      {
        "kind": 14,
        "name": "c_crcPol",
        "range": {
          "end": {
            "character": 67,
            "line": 13,
          },
          "start": {
            "character": 2,
            "line": 13,
          },
        },
        "selectionRange": {
          "end": {
            "character": 19,
            "line": 13,
          },
          "start": {
            "character": 11,
            "line": 13,
          },
        },
      },
      {
        "kind": 12,
        "name": "reflect",
        "range": {
          "end": {
            "character": 14,
            "line": 22,
          },
          "start": {
            "character": 2,
            "line": 15,
          },
        },
        "selectionRange": {
          "end": {
            "character": 18,
            "line": 15,
          },
          "start": {
            "character": 11,
            "line": 15,
          },
        },
      },
      {
        "children": [
          {
            "kind": 12,
            "name": "Init",
            "range": {
              "end": {
                "character": 17,
                "line": 32,
              },
              "start": {
                "character": 4,
                "line": 29,
              },
            },
            "selectionRange": {
              "end": {
                "character": 18,
                "line": 29,
              },
              "start": {
                "character": 14,
                "line": 29,
              },
            },
          },
          {
            "kind": 12,
            "name": "Input",
            "range": {
              "end": {
                "character": 17,
                "line": 45,
              },
              "start": {
                "character": 4,
                "line": 34,
              },
            },
            "selectionRange": {
              "end": {
                "character": 19,
                "line": 34,
              },
              "start": {
                "character": 14,
                "line": 34,
              },
            },
          },
          {
            "kind": 12,
            "name": "GetCrc",
            "range": {
              "end": {
                "character": 16,
                "line": 52,
              },
              "start": {
                "character": 4,
                "line": 47,
              },
            },
            "selectionRange": {
              "end": {
                "character": 26,
                "line": 47,
              },
              "start": {
                "character": 20,
                "line": 47,
              },
            },
          },
        ],
        "detail": "protected type",
        "kind": 5,
        "name": "CrcCalculator",
        "range": {
          "end": {
            "character": 16,
            "line": 54,
          },
          "start": {
            "character": 2,
            "line": 25,
          },
        },
        "selectionRange": {
          "end": {
            "character": 20,
            "line": 25,
          },
          "start": {
            "character": 7,
            "line": 25,
          },
        },
      },
    ],
    "detail": "package body",
    "kind": 5,
    "name": "pkg",
    "range": {
      "end": {
        "character": 16,
        "line": 55,
      },
      "start": {
        "character": 13,
        "line": 12,
      },
    },
    "selectionRange": {
      "end": {
        "character": 16,
        "line": 12,
      },
      "start": {
        "character": 13,
        "line": 12,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_record.vhd 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "kind": 8,
            "name": "field",
            "range": {
              "end": {
                "character": 18,
                "line": 6,
              },
              "start": {
                "character": 4,
                "line": 6,
              },
            },
            "selectionRange": {
              "end": {
                "character": 9,
                "line": 6,
              },
              "start": {
                "character": 4,
                "line": 6,
              },
            },
          },
        ],
        "detail": "Record",
        "kind": 23,
        "name": "rec",
        "range": {
          "end": {
            "character": 2,
            "line": 7,
          },
          "start": {
            "character": 2,
            "line": 5,
          },
        },
        "selectionRange": {
          "end": {
            "character": 10,
            "line": 5,
          },
          "start": {
            "character": 7,
            "line": 5,
          },
        },
      },
    ],
    "detail": "package",
    "kind": 5,
    "name": "pkg",
    "range": {
      "end": {
        "character": 12,
        "line": 8,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 11,
        "line": 4,
      },
      "start": {
        "character": 8,
        "line": 4,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_stateMachine.vhd 1`] = `
[
  {
    "children": undefined,
    "detail": "entity",
    "kind": 11,
    "name": "test_else_generate",
    "range": {
      "end": {
        "character": 22,
        "line": 5,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 25,
        "line": 4,
      },
      "start": {
        "character": 7,
        "line": 4,
      },
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "idle",
                "range": {
                  "end": {
                    "character": 25,
                    "line": 16,
                  },
                  "start": {
                    "character": 6,
                    "line": 15,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 25,
                    "line": 16,
                  },
                  "start": {
                    "character": 6,
                    "line": 15,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "working|workingHard",
                "range": {
                  "end": {
                    "character": 25,
                    "line": 18,
                  },
                  "start": {
                    "character": 6,
                    "line": 17,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 25,
                    "line": 18,
                  },
                  "start": {
                    "character": 6,
                    "line": 17,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "waiting",
                "range": {
                  "end": {
                    "character": 22,
                    "line": 20,
                  },
                  "start": {
                    "character": 6,
                    "line": 19,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 22,
                    "line": 20,
                  },
                  "start": {
                    "character": 6,
                    "line": 19,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "others",
                "range": {
                  "end": {
                    "character": 29,
                    "line": 22,
                  },
                  "start": {
                    "character": 6,
                    "line": 21,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 29,
                    "line": 22,
                  },
                  "start": {
                    "character": 6,
                    "line": 21,
                  },
                },
              },
            ],
            "detail": "case",
            "kind": 10,
            "name": "state",
            "range": {
              "end": {
                "character": 13,
                "line": 23,
              },
              "start": {
                "character": 4,
                "line": 14,
              },
            },
            "selectionRange": {
              "end": {
                "character": 13,
                "line": 23,
              },
              "start": {
                "character": 4,
                "line": 14,
              },
            },
          },
        ],
        "detail": "process",
        "kind": 12,
        "name": "p_reg",
        "range": {
          "end": {
            "character": 13,
            "line": 24,
          },
          "start": {
            "character": 2,
            "line": 12,
          },
        },
        "selectionRange": {
          "end": {
            "character": 7,
            "line": 12,
          },
          "start": {
            "character": 2,
            "line": 12,
          },
        },
      },
    ],
    "detail": "architecture",
    "kind": 5,
    "name": "test_else_generate",
    "range": {
      "end": {
        "character": 9,
        "line": 26,
      },
      "start": {
        "character": 0,
        "line": 7,
      },
    },
    "selectionRange": {
      "end": {
        "character": 39,
        "line": 7,
      },
      "start": {
        "character": 21,
        "line": 7,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_stateMachineCase.vhd 1`] = `
[
  {
    "children": undefined,
    "detail": "entity",
    "kind": 11,
    "name": "test_else_generate",
    "range": {
      "end": {
        "character": 22,
        "line": 5,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 25,
        "line": 4,
      },
      "start": {
        "character": 7,
        "line": 4,
      },
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [],
                        "detail": "when clause",
                        "kind": 22,
                        "name": "idle",
                        "range": {
                          "end": {
                            "character": 30,
                            "line": 19,
                          },
                          "start": {
                            "character": 10,
                            "line": 18,
                          },
                        },
                        "selectionRange": {
                          "end": {
                            "character": 30,
                            "line": 19,
                          },
                          "start": {
                            "character": 10,
                            "line": 18,
                          },
                        },
                      },
                      {
                        "children": [],
                        "detail": "when clause",
                        "kind": 22,
                        "name": "others",
                        "range": {
                          "end": {
                            "character": 27,
                            "line": 21,
                          },
                          "start": {
                            "character": 10,
                            "line": 20,
                          },
                        },
                        "selectionRange": {
                          "end": {
                            "character": 27,
                            "line": 21,
                          },
                          "start": {
                            "character": 10,
                            "line": 20,
                          },
                        },
                      },
                    ],
                    "detail": "case",
                    "kind": 10,
                    "name": "state1",
                    "range": {
                      "end": {
                        "character": 17,
                        "line": 22,
                      },
                      "start": {
                        "character": 8,
                        "line": 17,
                      },
                    },
                    "selectionRange": {
                      "end": {
                        "character": 17,
                        "line": 22,
                      },
                      "start": {
                        "character": 8,
                        "line": 17,
                      },
                    },
                  },
                ],
                "detail": "when clause",
                "kind": 22,
                "name": "idle",
                "range": {
                  "end": {
                    "character": 17,
                    "line": 22,
                  },
                  "start": {
                    "character": 6,
                    "line": 16,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 17,
                    "line": 22,
                  },
                  "start": {
                    "character": 6,
                    "line": 16,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "working|workingHard",
                "range": {
                  "end": {
                    "character": 26,
                    "line": 24,
                  },
                  "start": {
                    "character": 6,
                    "line": 23,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 26,
                    "line": 24,
                  },
                  "start": {
                    "character": 6,
                    "line": 23,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "waiting",
                "range": {
                  "end": {
                    "character": 23,
                    "line": 26,
                  },
                  "start": {
                    "character": 6,
                    "line": 25,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 23,
                    "line": 26,
                  },
                  "start": {
                    "character": 6,
                    "line": 25,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "others",
                "range": {
                  "end": {
                    "character": 30,
                    "line": 28,
                  },
                  "start": {
                    "character": 6,
                    "line": 27,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 30,
                    "line": 28,
                  },
                  "start": {
                    "character": 6,
                    "line": 27,
                  },
                },
              },
            ],
            "detail": "case",
            "kind": 10,
            "name": "state0",
            "range": {
              "end": {
                "character": 13,
                "line": 29,
              },
              "start": {
                "character": 4,
                "line": 15,
              },
            },
            "selectionRange": {
              "end": {
                "character": 13,
                "line": 29,
              },
              "start": {
                "character": 4,
                "line": 15,
              },
            },
          },
        ],
        "detail": "process",
        "kind": 12,
        "name": "p_reg",
        "range": {
          "end": {
            "character": 13,
            "line": 30,
          },
          "start": {
            "character": 2,
            "line": 13,
          },
        },
        "selectionRange": {
          "end": {
            "character": 7,
            "line": 13,
          },
          "start": {
            "character": 2,
            "line": 13,
          },
        },
      },
    ],
    "detail": "architecture",
    "kind": 5,
    "name": "test_else_generate",
    "range": {
      "end": {
        "character": 9,
        "line": 32,
      },
      "start": {
        "character": 0,
        "line": 7,
      },
    },
    "selectionRange": {
      "end": {
        "character": 39,
        "line": 7,
      },
      "start": {
        "character": 21,
        "line": 7,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_stateMachineElse.vhd 1`] = `
[
  {
    "children": undefined,
    "detail": "entity",
    "kind": 11,
    "name": "test_else_generate",
    "range": {
      "end": {
        "character": 22,
        "line": 5,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 25,
        "line": 4,
      },
      "start": {
        "character": 7,
        "line": 4,
      },
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "idle",
                "range": {
                  "end": {
                    "character": 27,
                    "line": 18,
                  },
                  "start": {
                    "character": 8,
                    "line": 17,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 27,
                    "line": 18,
                  },
                  "start": {
                    "character": 8,
                    "line": 17,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "working|workingHard",
                "range": {
                  "end": {
                    "character": 27,
                    "line": 20,
                  },
                  "start": {
                    "character": 8,
                    "line": 19,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 27,
                    "line": 20,
                  },
                  "start": {
                    "character": 8,
                    "line": 19,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "waiting",
                "range": {
                  "end": {
                    "character": 24,
                    "line": 22,
                  },
                  "start": {
                    "character": 8,
                    "line": 21,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 24,
                    "line": 22,
                  },
                  "start": {
                    "character": 8,
                    "line": 21,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "others",
                "range": {
                  "end": {
                    "character": 31,
                    "line": 24,
                  },
                  "start": {
                    "character": 8,
                    "line": 23,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 31,
                    "line": 24,
                  },
                  "start": {
                    "character": 8,
                    "line": 23,
                  },
                },
              },
            ],
            "detail": "case",
            "kind": 10,
            "name": "state",
            "range": {
              "end": {
                "character": 15,
                "line": 25,
              },
              "start": {
                "character": 6,
                "line": 16,
              },
            },
            "selectionRange": {
              "end": {
                "character": 15,
                "line": 25,
              },
              "start": {
                "character": 6,
                "line": 16,
              },
            },
          },
        ],
        "detail": "process",
        "kind": 12,
        "name": "p_reg",
        "range": {
          "end": {
            "character": 13,
            "line": 27,
          },
          "start": {
            "character": 2,
            "line": 12,
          },
        },
        "selectionRange": {
          "end": {
            "character": 7,
            "line": 12,
          },
          "start": {
            "character": 2,
            "line": 12,
          },
        },
      },
    ],
    "detail": "architecture",
    "kind": 5,
    "name": "test_else_generate",
    "range": {
      "end": {
        "character": 9,
        "line": 29,
      },
      "start": {
        "character": 0,
        "line": 7,
      },
    },
    "selectionRange": {
      "end": {
        "character": 39,
        "line": 7,
      },
      "start": {
        "character": 21,
        "line": 7,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_stateMachineElsif.vhd 1`] = `
[
  {
    "children": undefined,
    "detail": "entity",
    "kind": 11,
    "name": "test_else_generate",
    "range": {
      "end": {
        "character": 22,
        "line": 5,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 25,
        "line": 4,
      },
      "start": {
        "character": 7,
        "line": 4,
      },
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "idle",
                "range": {
                  "end": {
                    "character": 27,
                    "line": 18,
                  },
                  "start": {
                    "character": 8,
                    "line": 17,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 27,
                    "line": 18,
                  },
                  "start": {
                    "character": 8,
                    "line": 17,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "working|workingHard",
                "range": {
                  "end": {
                    "character": 27,
                    "line": 20,
                  },
                  "start": {
                    "character": 8,
                    "line": 19,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 27,
                    "line": 20,
                  },
                  "start": {
                    "character": 8,
                    "line": 19,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "waiting",
                "range": {
                  "end": {
                    "character": 24,
                    "line": 22,
                  },
                  "start": {
                    "character": 8,
                    "line": 21,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 24,
                    "line": 22,
                  },
                  "start": {
                    "character": 8,
                    "line": 21,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "others",
                "range": {
                  "end": {
                    "character": 31,
                    "line": 24,
                  },
                  "start": {
                    "character": 8,
                    "line": 23,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 31,
                    "line": 24,
                  },
                  "start": {
                    "character": 8,
                    "line": 23,
                  },
                },
              },
            ],
            "detail": "case",
            "kind": 10,
            "name": "state",
            "range": {
              "end": {
                "character": 15,
                "line": 25,
              },
              "start": {
                "character": 6,
                "line": 16,
              },
            },
            "selectionRange": {
              "end": {
                "character": 15,
                "line": 25,
              },
              "start": {
                "character": 6,
                "line": 16,
              },
            },
          },
        ],
        "detail": "process",
        "kind": 12,
        "name": "p_reg",
        "range": {
          "end": {
            "character": 13,
            "line": 27,
          },
          "start": {
            "character": 2,
            "line": 12,
          },
        },
        "selectionRange": {
          "end": {
            "character": 7,
            "line": 12,
          },
          "start": {
            "character": 2,
            "line": 12,
          },
        },
      },
    ],
    "detail": "architecture",
    "kind": 5,
    "name": "test_else_generate",
    "range": {
      "end": {
        "character": 9,
        "line": 29,
      },
      "start": {
        "character": 0,
        "line": 7,
      },
    },
    "selectionRange": {
      "end": {
        "character": 39,
        "line": 7,
      },
      "start": {
        "character": 21,
        "line": 7,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_stateMachineFor.vhd 1`] = `
[
  {
    "children": undefined,
    "detail": "entity",
    "kind": 11,
    "name": "test_else_generate",
    "range": {
      "end": {
        "character": 22,
        "line": 5,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 25,
        "line": 4,
      },
      "start": {
        "character": 7,
        "line": 4,
      },
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "idle",
                "range": {
                  "end": {
                    "character": 27,
                    "line": 17,
                  },
                  "start": {
                    "character": 8,
                    "line": 16,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 27,
                    "line": 17,
                  },
                  "start": {
                    "character": 8,
                    "line": 16,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "working|workingHard",
                "range": {
                  "end": {
                    "character": 27,
                    "line": 19,
                  },
                  "start": {
                    "character": 8,
                    "line": 18,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 27,
                    "line": 19,
                  },
                  "start": {
                    "character": 8,
                    "line": 18,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "waiting",
                "range": {
                  "end": {
                    "character": 24,
                    "line": 21,
                  },
                  "start": {
                    "character": 8,
                    "line": 20,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 24,
                    "line": 21,
                  },
                  "start": {
                    "character": 8,
                    "line": 20,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "others",
                "range": {
                  "end": {
                    "character": 31,
                    "line": 23,
                  },
                  "start": {
                    "character": 8,
                    "line": 22,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 31,
                    "line": 23,
                  },
                  "start": {
                    "character": 8,
                    "line": 22,
                  },
                },
              },
            ],
            "detail": "case",
            "kind": 10,
            "name": "state",
            "range": {
              "end": {
                "character": 15,
                "line": 24,
              },
              "start": {
                "character": 6,
                "line": 15,
              },
            },
            "selectionRange": {
              "end": {
                "character": 15,
                "line": 24,
              },
              "start": {
                "character": 6,
                "line": 15,
              },
            },
          },
        ],
        "detail": "process",
        "kind": 12,
        "name": "p_reg",
        "range": {
          "end": {
            "character": 13,
            "line": 26,
          },
          "start": {
            "character": 2,
            "line": 12,
          },
        },
        "selectionRange": {
          "end": {
            "character": 7,
            "line": 12,
          },
          "start": {
            "character": 2,
            "line": 12,
          },
        },
      },
    ],
    "detail": "architecture",
    "kind": 5,
    "name": "test_else_generate",
    "range": {
      "end": {
        "character": 9,
        "line": 28,
      },
      "start": {
        "character": 0,
        "line": 7,
      },
    },
    "selectionRange": {
      "end": {
        "character": 39,
        "line": 7,
      },
      "start": {
        "character": 21,
        "line": 7,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_stateMachineIf.vhd 1`] = `
[
  {
    "children": undefined,
    "detail": "entity",
    "kind": 11,
    "name": "test_else_generate",
    "range": {
      "end": {
        "character": 22,
        "line": 5,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 25,
        "line": 4,
      },
      "start": {
        "character": 7,
        "line": 4,
      },
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "idle",
                "range": {
                  "end": {
                    "character": 27,
                    "line": 17,
                  },
                  "start": {
                    "character": 8,
                    "line": 16,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 27,
                    "line": 17,
                  },
                  "start": {
                    "character": 8,
                    "line": 16,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "working|workingHard",
                "range": {
                  "end": {
                    "character": 27,
                    "line": 19,
                  },
                  "start": {
                    "character": 8,
                    "line": 18,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 27,
                    "line": 19,
                  },
                  "start": {
                    "character": 8,
                    "line": 18,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "waiting",
                "range": {
                  "end": {
                    "character": 24,
                    "line": 21,
                  },
                  "start": {
                    "character": 8,
                    "line": 20,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 24,
                    "line": 21,
                  },
                  "start": {
                    "character": 8,
                    "line": 20,
                  },
                },
              },
              {
                "children": [],
                "detail": "when clause",
                "kind": 22,
                "name": "others",
                "range": {
                  "end": {
                    "character": 31,
                    "line": 23,
                  },
                  "start": {
                    "character": 8,
                    "line": 22,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 31,
                    "line": 23,
                  },
                  "start": {
                    "character": 8,
                    "line": 22,
                  },
                },
              },
            ],
            "detail": "case",
            "kind": 10,
            "name": "state",
            "range": {
              "end": {
                "character": 15,
                "line": 24,
              },
              "start": {
                "character": 6,
                "line": 15,
              },
            },
            "selectionRange": {
              "end": {
                "character": 15,
                "line": 24,
              },
              "start": {
                "character": 6,
                "line": 15,
              },
            },
          },
        ],
        "detail": "process",
        "kind": 12,
        "name": "p_reg",
        "range": {
          "end": {
            "character": 13,
            "line": 26,
          },
          "start": {
            "character": 2,
            "line": 12,
          },
        },
        "selectionRange": {
          "end": {
            "character": 7,
            "line": 12,
          },
          "start": {
            "character": 2,
            "line": 12,
          },
        },
      },
    ],
    "detail": "architecture",
    "kind": 5,
    "name": "test_else_generate",
    "range": {
      "end": {
        "character": 9,
        "line": 28,
      },
      "start": {
        "character": 0,
        "line": 7,
      },
    },
    "selectionRange": {
      "end": {
        "character": 39,
        "line": 7,
      },
      "start": {
        "character": 21,
        "line": 7,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_subprogram.vhd 1`] = `
[
  {
    "children": [
      {
        "kind": 12,
        "name": "func",
        "range": {
          "end": {
            "character": 30,
            "line": 5,
          },
          "start": {
            "character": 2,
            "line": 5,
          },
        },
        "selectionRange": {
          "end": {
            "character": 15,
            "line": 5,
          },
          "start": {
            "character": 11,
            "line": 5,
          },
        },
      },
    ],
    "detail": "package",
    "kind": 5,
    "name": "pkg",
    "range": {
      "end": {
        "character": 12,
        "line": 6,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 11,
        "line": 4,
      },
      "start": {
        "character": 8,
        "line": 4,
      },
    },
  },
  {
    "children": [
      {
        "kind": 12,
        "name": "func",
        "range": {
          "end": {
            "character": 14,
            "line": 12,
          },
          "start": {
            "character": 2,
            "line": 9,
          },
        },
        "selectionRange": {
          "end": {
            "character": 15,
            "line": 9,
          },
          "start": {
            "character": 11,
            "line": 9,
          },
        },
      },
    ],
    "detail": "package body",
    "kind": 5,
    "name": "pkg",
    "range": {
      "end": {
        "character": 16,
        "line": 13,
      },
      "start": {
        "character": 13,
        "line": 8,
      },
    },
    "selectionRange": {
      "end": {
        "character": 16,
        "line": 8,
      },
      "start": {
        "character": 13,
        "line": 8,
      },
    },
  },
]
`;

exports[`Testing document symbols of test_subprogramInterface.vhd 1`] = `
[
  {
    "children": [
      {
        "kind": 12,
        "name": "func",
        "range": {
          "end": {
            "character": 18,
            "line": 8,
          },
          "start": {
            "character": 2,
            "line": 5,
          },
        },
        "selectionRange": {
          "end": {
            "character": 15,
            "line": 5,
          },
          "start": {
            "character": 11,
            "line": 5,
          },
        },
      },
    ],
    "detail": "package",
    "kind": 5,
    "name": "pkg",
    "range": {
      "end": {
        "character": 12,
        "line": 9,
      },
      "start": {
        "character": 0,
        "line": 4,
      },
    },
    "selectionRange": {
      "end": {
        "character": 11,
        "line": 4,
      },
      "start": {
        "character": 8,
        "line": 4,
      },
    },
  },
]
`;

exports[`Testing workspace symbol 1`] = `
[
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 12,
          "line": 12,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_alias.vhd",
    },
    "name": "pkg",
    "uri": "file:///c/dummy//test_alias.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 2,
          "line": 7,
        },
        "start": {
          "character": 2,
          "line": 5,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_alias.vhd",
    },
    "name": "rec",
    "uri": "file:///c/dummy//test_alias.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 14,
          "line": 5,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_block.vhd",
    },
    "name": "test_block",
    "uri": "file:///c/dummy//test_block.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 8,
          "line": 5,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_case_generate.vhd",
    },
    "name": "test",
    "uri": "file:///c/dummy//test_case_generate.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 8,
          "line": 5,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_for_generate.vhd",
    },
    "name": "test",
    "uri": "file:///c/dummy//test_for_generate.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 8,
          "line": 5,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_if_else_generate.vhd",
    },
    "name": "test",
    "uri": "file:///c/dummy//test_if_else_generate.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 8,
          "line": 5,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_if_elsif_generate.vhd",
    },
    "name": "test",
    "uri": "file:///c/dummy//test_if_elsif_generate.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 13,
          "line": 5,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_inst.vhd",
    },
    "name": "test_inst",
    "uri": "file:///c/dummy//test_inst.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 16,
          "line": 8,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_process.vhd",
    },
    "name": "test_process",
    "uri": "file:///c/dummy//test_process.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 12,
          "line": 10,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_protected.vhd",
    },
    "name": "pkg",
    "uri": "file:///c/dummy//test_protected.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 15,
          "line": 9,
        },
        "start": {
          "character": 2,
          "line": 5,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_protected.vhd",
    },
    "name": "CrcCalculator",
    "uri": "file:///c/dummy//test_protected.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 18,
          "line": 6,
        },
        "start": {
          "character": 4,
          "line": 6,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_protected.vhd",
    },
    "name": "Init",
    "uri": "file:///c/dummy//test_protected.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 44,
          "line": 7,
        },
        "start": {
          "character": 4,
          "line": 7,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_protected.vhd",
    },
    "name": "Input",
    "uri": "file:///c/dummy//test_protected.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 51,
          "line": 8,
        },
        "start": {
          "character": 4,
          "line": 8,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_protected.vhd",
    },
    "name": "GetCrc",
    "uri": "file:///c/dummy//test_protected.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 14,
          "line": 22,
        },
        "start": {
          "character": 2,
          "line": 15,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_protected.vhd",
    },
    "name": "reflect",
    "uri": "file:///c/dummy//test_protected.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 16,
          "line": 54,
        },
        "start": {
          "character": 2,
          "line": 25,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_protected.vhd",
    },
    "name": "CrcCalculator",
    "uri": "file:///c/dummy//test_protected.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 17,
          "line": 32,
        },
        "start": {
          "character": 4,
          "line": 29,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_protected.vhd",
    },
    "name": "Init",
    "uri": "file:///c/dummy//test_protected.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 17,
          "line": 45,
        },
        "start": {
          "character": 4,
          "line": 34,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_protected.vhd",
    },
    "name": "Input",
    "uri": "file:///c/dummy//test_protected.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 16,
          "line": 52,
        },
        "start": {
          "character": 4,
          "line": 47,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_protected.vhd",
    },
    "name": "GetCrc",
    "uri": "file:///c/dummy//test_protected.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 12,
          "line": 8,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_record.vhd",
    },
    "name": "pkg",
    "uri": "file:///c/dummy//test_record.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 2,
          "line": 7,
        },
        "start": {
          "character": 2,
          "line": 5,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_record.vhd",
    },
    "name": "rec",
    "uri": "file:///c/dummy//test_record.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 22,
          "line": 5,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachine.vhd",
    },
    "name": "test_else_generate",
    "uri": "file:///c/dummy//test_stateMachine.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 55,
          "line": 8,
        },
        "start": {
          "character": 2,
          "line": 8,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachine.vhd",
    },
    "name": "t_state",
    "uri": "file:///c/dummy//test_stateMachine.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 13,
          "line": 24,
        },
        "start": {
          "character": 2,
          "line": 12,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachine.vhd",
    },
    "name": "p_reg",
    "uri": "file:///c/dummy//test_stateMachine.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 22,
          "line": 5,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachineCase.vhd",
    },
    "name": "test_else_generate",
    "uri": "file:///c/dummy//test_stateMachineCase.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 55,
          "line": 8,
        },
        "start": {
          "character": 2,
          "line": 8,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachineCase.vhd",
    },
    "name": "t_state",
    "uri": "file:///c/dummy//test_stateMachineCase.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 13,
          "line": 30,
        },
        "start": {
          "character": 2,
          "line": 13,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachineCase.vhd",
    },
    "name": "p_reg",
    "uri": "file:///c/dummy//test_stateMachineCase.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 22,
          "line": 5,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachineElse.vhd",
    },
    "name": "test_else_generate",
    "uri": "file:///c/dummy//test_stateMachineElse.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 55,
          "line": 8,
        },
        "start": {
          "character": 2,
          "line": 8,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachineElse.vhd",
    },
    "name": "t_state",
    "uri": "file:///c/dummy//test_stateMachineElse.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 13,
          "line": 27,
        },
        "start": {
          "character": 2,
          "line": 12,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachineElse.vhd",
    },
    "name": "p_reg",
    "uri": "file:///c/dummy//test_stateMachineElse.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 22,
          "line": 5,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachineElsif.vhd",
    },
    "name": "test_else_generate",
    "uri": "file:///c/dummy//test_stateMachineElsif.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 55,
          "line": 8,
        },
        "start": {
          "character": 2,
          "line": 8,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachineElsif.vhd",
    },
    "name": "t_state",
    "uri": "file:///c/dummy//test_stateMachineElsif.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 13,
          "line": 27,
        },
        "start": {
          "character": 2,
          "line": 12,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachineElsif.vhd",
    },
    "name": "p_reg",
    "uri": "file:///c/dummy//test_stateMachineElsif.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 22,
          "line": 5,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachineFor.vhd",
    },
    "name": "test_else_generate",
    "uri": "file:///c/dummy//test_stateMachineFor.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 55,
          "line": 8,
        },
        "start": {
          "character": 2,
          "line": 8,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachineFor.vhd",
    },
    "name": "t_state",
    "uri": "file:///c/dummy//test_stateMachineFor.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 13,
          "line": 26,
        },
        "start": {
          "character": 2,
          "line": 12,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachineFor.vhd",
    },
    "name": "p_reg",
    "uri": "file:///c/dummy//test_stateMachineFor.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 22,
          "line": 5,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachineIf.vhd",
    },
    "name": "test_else_generate",
    "uri": "file:///c/dummy//test_stateMachineIf.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 55,
          "line": 8,
        },
        "start": {
          "character": 2,
          "line": 8,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachineIf.vhd",
    },
    "name": "t_state",
    "uri": "file:///c/dummy//test_stateMachineIf.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 13,
          "line": 26,
        },
        "start": {
          "character": 2,
          "line": 12,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_stateMachineIf.vhd",
    },
    "name": "p_reg",
    "uri": "file:///c/dummy//test_stateMachineIf.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 12,
          "line": 6,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_subprogram.vhd",
    },
    "name": "pkg",
    "uri": "file:///c/dummy//test_subprogram.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 30,
          "line": 5,
        },
        "start": {
          "character": 2,
          "line": 5,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_subprogram.vhd",
    },
    "name": "func",
    "uri": "file:///c/dummy//test_subprogram.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 14,
          "line": 12,
        },
        "start": {
          "character": 2,
          "line": 9,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_subprogram.vhd",
    },
    "name": "func",
    "uri": "file:///c/dummy//test_subprogram.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 12,
          "line": 9,
        },
        "start": {
          "character": 0,
          "line": 4,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_subprogramInterface.vhd",
    },
    "name": "pkg",
    "uri": "file:///c/dummy//test_subprogramInterface.vhd",
  },
  {
    "kind": 19,
    "location": {
      "range": {
        "end": {
          "character": 18,
          "line": 8,
        },
        "start": {
          "character": 2,
          "line": 5,
        },
      },
      "uri": "file:///home/anton/bastels/vhdl-linter/test/unitTests/documentSymbol/test_subprogramInterface.vhd",
    },
    "name": "func",
    "uri": "file:///c/dummy//test_subprogramInterface.vhd",
  },
]
`;
